Crear html y css basicos

--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
     <title>Cajero</title>
   </head>
   <body>
+    <div class="container">
+      <header>
+        <div class="esquinas-header">
+          <h2>BanCoco</h2>
+        </div>
+        <h1>Bienvenido Usuario</h1>
+        <div class="esquinas-header">
+          <img class="header-img" src="images/banco.png" alt="Logotipo banco">
+        </div>
+      </header>
 
+      <section class="instrucciones">
+        <p>Pulse la tecla de la operación que desea realizar</p>
+      </section>
+      <main>
+        <div class="left-container">
+          <button class="boton-operacion">Consulta</button>
+
+          <button class="boton-operacion">Retiro</button>
+
+          <button class="boton-operacion">Depósito</button>
+        </div>
+        
+        <div class="right-container">
+          <button class="boton-operacion">Transferencia</button>
+
+          <button class="boton-operacion">Pago</button>
+
+          <button class="boton-operacion">Salir</button>
+        </div>
+      </main>
+    </div>
+
+    <div class=""></div>
 
     <script src="cajero.js"></script>
   </body>
