--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
 
     <div id="contenedorPrincipal">
 
-
-      <h1>SUPER BANK</h1>
+      <center>
+      <h1 id="titleText">SUPER BANK</h1>
+      </center>
+     
 
       <div class="inputs">
-        <h3>Digite su Numero de Cuenta</h3>
+        <h3>Digite su Numero de Cuenta:</h3>
         <input type="number" placeholder="Numero de Cuenta" id="nDeCuenta" required>
       </div>
 
-      <div class="inputs"></div>
-        <h3>Ingrese el pin </h3>
+      <br>
+
+      <div class="inputs">
+        <h3>Ingrese el pin:</h3>
         <input type="password" placeholder="Pin" id="pin" required>
       </div>
+      <br>
 
-      <button type="button" id="guardar">Guardar fake</button>
+      <button class='button' type="button" id="guardar">ENTER</button>
+      <br>
 
 
 
@@ -35,5 +41,15 @@
 
 
     <script src="cajero.js"></script>
+
+
+    <footer>
+
+      <p class="text-center">Copyright @2021 | Designed  by <a href="#">Andres & Yann Company</a></p>
+  
+    
+      </footer>
+
   </body>
+  
 </html>
